[package]
name = "resume_back"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-service = "2"
futures-util = "0.3"
mongodb = "3.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }

argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
dotenvy = "0.15"
actix-cors = "0.7.1"
env_logger = "0.11.8"

reqwest = { version = "0.12", features = ["json"] }  # for calling AI API
log = "0.4.27"
